src/style/reset-dsfr.css
/*
Fix DSFR issue
https://gouvfr.atlassian.net/servicedesk/customer/portal/1/DSFR-322
*/
.fr-tabs__panel:not(.fr-tabs__panel--selected) {
    display: none;
}

span.error {
    color: var(--error-main-525);
}

.fr-table thead th.sortable {
    cursor: pointer;
}

/** reset icon url */
.fr-download__link:after,
.fr-card:before,
.fr-tag--dismiss:after,
.fr-badge:before {
    display: none !important;
}

/** Icons system from remixicon */

[target=_blank]:after,
.fr-search-bar button.fr-btn:before,
.fr-error-text:before,
.fr-valid-text:before,
.fr-header__navbar .fr-btn--menu:before,
.fr-header__navbar .fr-btn--search:before,
.fr-nav__btn:after,
button.fr-accordion__btn[aria-expanded=true]:before,
button.fr-accordion__btn:before,
.fr-link--close:before,
.fr-notice button.fr-btn--close:before,
button[class^="fr-pagination__link"]:before,
a[class^="fr-btn"]:before,
button[class^="fr-btn"]:before,
[class^="fr-alert"]:before,
div.fr-notice--info .fr-notice__body:before,
.fr-share > .fr-btns-group > .fr-btn.fr-btn--facebook:before {
    font-family: "remixicon";
    background-color: inherit;
    mask-image: inherit;
    -webkit-mask-image: inherit;
    line-height: 1.2rem;
    font-size: 1rem;
}

/**
  Accordion
 */
button.fr-accordion__btn:before {
    content: '\ea13';
    color: var(--text-action-high-grey);
}

button.fr-accordion__btn[aria-expanded=true]:before {
    content: '\f1af';
}

/**
  Alert
 */

[class^="fr-alert"]:before {
    font-size: 1.4rem;
}

.fr-alert--success:before,
.fr-valid-text:before {
    content: '\eb80';
}

.fr-alert--error:before,
.fr-error-text:before {
    content: '\f0eb';
}

.fr-alert--info:before {
    content: '\ee58';
}

.fr-notice button.fr-btn--close:before,
.fr-link--close:before {
    content: '\eb99';
}

/**
  Footer
 */

[target=_blank]:after {
    content: '\ecaf';
    height: inherit;
    font-size: 0.9rem;
}

/**
  Header
 */

.fr-search-bar button.fr-btn:before {
    content: '\f0d1';
}

.fr-header__navbar .fr-btn--menu:before {
    content: '\ef3e';
    font-size: 1.2rem;
}

.fr-header__navbar .fr-btn--search:before {
    content: '\f0d1';
    font-size: 1.2rem;
}

.fr-nav__btn:after {
    content: '\ea4e';
}

ul.fr-btns-group > li.fr-share > a.fr-btn.fr-btn--facebook:before {
    content: '\ecbb';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

a.fr-btn--twitter:before {
    content: '\f23b';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

a.fr-btn--linkedin:before {
    content: '\eeb4';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

a.fr-btn--mail:before {
    content: '\eef6';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

button.fr-btn--copy:before {
    content: '\ecd5';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

/**
  Pagination
 */

button[class^="fr-pagination__link"]:before {
    font-size: 1.4rem;
    line-height: 1.5rem;
}

button.fr-pagination__link--prev:before {
    content: '\ea64';
}

button.fr-pagination__link--next:before {
    content: '\ea6e';
}

button.fr-pagination__link--first:before {
    content: '\f142';
}

button.fr-pagination__link--last:before {
    content: '\f146';
}

div.fr-notice--info .fr-notice__body:before {
    content: '\ee59';
    font-size: 1.4rem;
    line-height: 1.5rem;
}

